2014-04-24  Cong Hou  <congh@google.com>

PR tree-optimization/60896
    * tree-vect-patterns.c (vect_recog_dot_prod_pattern): Pick up
    all statements in PATTERN_DEF_SEQ in recognized widen-mult pattern.
    (vect_mark_pattern_stmts): Set the def type of all statements in
    PATTERN_DEF_SEQ as vect_internal_def.

2014-04-24  Cong Hou  <congh@google.com>

    PR tree-optimization/60896
    * g++.dg/vect/pr60896.cc: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@209773 138bc75d-0d04-0410-961f-82ee72b054a4